kubernetes/apps/observability/victoria-logs-single/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  hostnames:
  - victoria-logs.${SECRET_DOMAIN}
  parentRefs:
  - name: internal
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: vl
      port: 9428
